[package]
name = "server"
version = "0.1.0"
authors = ["FreeMasen"]

[dependencies]
env_logger = "0.5"
lettre = "0.8"
lettre_email = "0.8"
url = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ser_test = {path = "./ser_test"}
warp = "0.1"


[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]