[package]
name = "server"
version = "0.1.0"
authors = ["FreeMasen"]

[dependencies]
env_logger = "0.7.1"
lettre = "0.9"
lettre_email = "0.9"
url = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ser_test = {path = "./ser_test"}
warp = "0.1"


[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]